--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-slick": "^0.28.1",
     "react-yandex-maps": "^4.6.0",
     "slick-carousel": "^1.8.1"
