--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "rinn-rise",
-  "version": "0.1.0",
+  "version": "0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ./components/** ./pages/** -c .eslintrc --ext js,jsx"
+    "lint": "eslint components/** ./pages/** -c .eslintrc --ext js,jsx"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -18,6 +18,10 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "sass": "^1.32.11"
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.4",
+    "prop-types": "^15.7.2",
+    "sass": "^1.32.11",
+    "typescript": "^4.2.4"
   }
 }
