--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.1",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "express": "^4.17.1",
-    "fs": "^0.0.1-security",
     "next": "10.1.3",
-    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-lazyload": "^3.2.0",
