--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
     "classnames": "^2.3.1",
     "next": "10.1.3",
     "react": "17.0.2",
